started to switch to async and added new design for file page